fixed overflow bug

--- a/src/components/Contact.scss
+++ b/src/components/Contact.scss
@@ -12,6 +12,8 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    overflow: hidden;
+    padding-bottom: 3em;
 
     .bubble {
       display: flex;
