--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -4,6 +4,8 @@
   flex-direction: column;
   padding-top: 4em;
   min-height: 40vh;
+  width: 100vw;
+  overflow: hidden;
 
   .special-header {
     text-transform: uppercase;
